--- a/website/style.css
+++ b/website/style.css
@@ -44,5 +44,6 @@ h1 {
     border: 0px;
     padding: 10px 60px;
     background-color: lightgrey;
-    line-height: 7px
+    line-height: 15px;
+    text-decoration: none;
 }
