--- a/website/style.css
+++ b/website/style.css
@@ -1,4 +1,4 @@
-body {
+﻿body {
     margin:0px;
     background: lightgrey;
 }
@@ -44,7 +44,7 @@ h1 {
     border: 0px;
     padding: 10px 60px;
     background-color: lightgrey;
-    line-height:28px;
+    line-height: 28px;
     text-decoration: none;
 }
 .links{
