--- a/website/style.css
+++ b/website/style.css
@@ -10,8 +10,8 @@ h1 {
     border: 00px;
     padding: 10px;
     margin: 0px;
-    background-color: mediumaquamarine;
-    color: #bb30e6;
+    background-color: darkkhaki;
+    color: grey;
 }
       .main-text{
           font-family: 'Eras ITC';
