--- a/website/style.css
+++ b/website/style.css
@@ -10,8 +10,13 @@ h1 {
     border: 00px;
     padding: 10px;
     margin: 0px;
-    background-color: darkkhaki;
-    color: grey;
+    background-color: tan;
+    color: darkslategray;
+
+}
+a{
+    text-decoration: none;
+    color: white;  
 }
       .main-text{
           font-family: 'Eras ITC';
@@ -56,8 +61,8 @@ h1 {
     border:0px;
     padding:80px;
     background-color:darkslategrey;
-    word-spacing: 40px;
-    text-decoration:none !important;
+    
+    
 }
 .img{
     height: 350px;
